--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Clément Calauzènes"
   avatar           : "profile.png"
-  bio              : "Leading a team of researchers at Criteo AI Lab."
+  bio              : "Researcher in AI. Leading a research group at Criteo AI Lab."
   location         : "Paris, France"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
